<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/movie_list_thumbnail"
        android:layout_width="90dp"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/image_view_description"/>

    <RelativeLayout
        android:id="@+id/movie_list_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/movie_list_thumbnail">

        <TextView
            android:id="@+id/movie_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:textSize="20sp"
            android:text="@string/title" />

        <TextView
            android:id="@+id/movie_list_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/movie_list_title"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:maxLines="3"
            android:textSize="10sp"
            android:text="@string/description" />

        <TextView
            android:id="@+id/movie_list_main_characters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_list_description"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:textSize="12sp"
            android:text="@string/main_characters" />

        <TextView
            android:id="@+id/movie_list_has_seen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/movie_list_main_characters"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="9sp"
            android:textColor="@color/hasSeenColor"
            android:text="@string/has_seen" />

    </RelativeLayout>
</RelativeLayout>